# friday

./: .pre-commit-config.yaml  Jenkinsfile  README.md  app.py  pyproject.toml
